fix focus ring clipping

--- a/client/web/src/extensions/components/ActionItemsBar.scss
+++ b/client/web/src/extensions/components/ActionItemsBar.scss
@@ -1,15 +1,19 @@
-$action-item-width: 2.5rem;
-$action-item-container-width: 2.5625; // 2.5rem + 1px
-
 $default-icon-colors: $oc-grape-7, $oc-violet-7, $oc-cyan-9, $oc-indigo-7, $oc-pink-8;
 
+// Add this class to the lowest common ancestor of <ActionItemsBar> and <ActionItemsToggle>
 .action-items {
+    --action-item-width: 2.5rem;
+    --action-item-container-width: 2.5625rem; // 2.5rem + 1px
+
     &__bar {
-        width: $action-item-container-width;
+        // We won't need hacky container width in the redesign.
+        // Remove this var and use --action-item-width everywhere.
+        width: var(--action-item-container-width);
         background-color: var(--color-bg-2);
         list-style: none;
 
         .theme-redesign & {
+            width: var(--action-item-width);
             background-color: var(--body-bg);
 
             // Only rendered for redesign
@@ -20,7 +24,7 @@ $default-icon-colors: $oc-grape-7, $oc-violet-7, $oc-cyan-9, $oc-indigo-7, $oc-p
     }
 
     &__toggle-container {
-        width: $action-item-container-width;
+        width: var(--action-item-width);
         background-color: var(--color-bg-2);
         padding-top: 0.375rem;
         padding-bottom: 0.25rem;
@@ -99,7 +103,7 @@ $default-icon-colors: $oc-grape-7, $oc-violet-7, $oc-cyan-9, $oc-indigo-7, $oc-p
     }
 
     &__action {
-        width: $action-item-width;
+        width: var(--action-item-width);
         height: 2rem;
 
         .theme-redesign & {
@@ -166,7 +170,7 @@ $default-icon-colors: $oc-grape-7, $oc-violet-7, $oc-cyan-9, $oc-indigo-7, $oc-p
     }
 
     &__scroll {
-        width: $action-item-width;
+        width: var(--action-item-width);
 
         &:hover {
             background-color: var(--link-hover-bg-color);
